; ModuleID = '/home/carl/AnghaBench/h2o/t/00unit/lib/core/extr_........libcoreutil.c_memcached_resumption_on_get.c'
source_filename = "/home/carl/AnghaBench/h2o/t/00unit/lib/core/extr_........libcoreutil.c_memcached_resumption_on_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.st_h2o_memcached_resumption_accept_data_t = type { %struct.TYPE_2__, i32* }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i8*)* @memcached_resumption_on_get to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @memcached_resumption_on_get(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.st_h2o_memcached_resumption_accept_data_t*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.st_h2o_memcached_resumption_accept_data_t*
  store %struct.st_h2o_memcached_resumption_accept_data_t* %7, %struct.st_h2o_memcached_resumption_accept_data_t** %5, align 8
  %8 = load %struct.st_h2o_memcached_resumption_accept_data_t*, %struct.st_h2o_memcached_resumption_accept_data_t** %5, align 8
  %9 = getelementptr inbounds %struct.st_h2o_memcached_resumption_accept_data_t, %struct.st_h2o_memcached_resumption_accept_data_t* %8, i32 0, i32 1
  store i32* null, i32** %9, align 8
  %10 = load %struct.st_h2o_memcached_resumption_accept_data_t*, %struct.st_h2o_memcached_resumption_accept_data_t** %5, align 8
  %11 = getelementptr inbounds %struct.st_h2o_memcached_resumption_accept_data_t, %struct.st_h2o_memcached_resumption_accept_data_t* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 8
  %14 = load i32, i32* %3, align 4
  %15 = call i32 @h2o_socket_ssl_resume_server_handshake(i32 %13, i32 %14)
  ret void
}

declare dso_local i32 @h2o_socket_ssl_resume_server_handshake(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
